--- a/privacy.html
+++ b/privacy.html
@@ -138,6 +138,8 @@
 											  periodically for any changes. I will
 											  notify you of any changes by posting the new Privacy Policy on
 											  this page.
+CineLinks uses external APIs to perform face-swapping. Images are temporarily processed and not stored or retained after the task is completed. No facial data is shared with third parties beyond the necessary processing.
+												  
 											</p> <p>This policy is effective as of 2023-05-25</p>  
 										</div>
 											<div>
